chore(*) add compilation args for run install on JDK17 (SonarCloud action)