@@ -66,6 +66,7 @@
         <module>/cranberry-statement</module>
         <module>/cranberry-logging</module>
         <module>/cranberry-data</module>
+        <module>cranberry-tests</module>
     </modules>
     <!--deploying modules]-->
 
@@ -335,7 +336,7 @@
                                     <message>Invalid Maven version. It should be at least 3.3.1</message>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>[1.8, 15)</version>
+                                    <version>[1.8,)</version>
                                     <message>Invalid Java version. It should be between 1.8 and 14</message>
                                 </requireJavaVersion>
                             </rules>
@@ -445,6 +446,20 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
+                    <!-- fix compilation problems on JDK 15+ -->
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <!--compiling source]-->
